add like button

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         Simon Marlow
       </div>
 
+<iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fpcphbook&amp;width=300&amp;height=46&amp;colorscheme=light&amp;layout=button_count&amp;action=like&amp;show_faces=false&amp;send=true"
+        scrolling="no" frameborder="0" style="border:none;
+                                              margin-top: 1ex;
+                                              overflow:hidden;
+                                              width:480px;
+                                              height:30px;"
+        allowTransparency="true"></iframe>
+
       <p>The book was published in August 2013 by O'Reilly Media.</p>
 
       <p><a href="http://chimera.labs.oreilly.com/books/1230000000929/index.html">Read
