--- a/index.html
+++ b/index.html
@@ -2,126 +2,129 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-    <title>Parallel and Concurrent Programming in Haskell</title>
-    <link rel="stylesheet" href="pcph.css" type="text/css"/>
+    <title>Simon Marlow</title>
+    <link rel="stylesheet" href="home.css" type="text/css"/>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
   </head>
 
   <body>
+    <div class="headshot">
+      <image id="me" src="simonmarlow.jpg" />
+    </div>
+    <div class="headleft">
+      <h1 class="mainhead">Simon Marlow</h1>
+
+      <p>Software Engineer at Facebook UK, Author
+        of <span class="booktitle">Parallel and Concurrent Programming in
+          Haskell</span> (O'Reilly), co-developer of the Glasgow Haskell
+        Compiler.</p>
+    </div>
+
+    <div class="clear"></div>
+
+    <p><a href="bib/bib.html">Publications</a></p>
+
     <div class="cover">
-      <image id="cover" src="cover.png" />
+      <a href="http://community.haskell.org/~simonmar/pcph/">
+        <image id="cover" src="pcph/cover.png" />
+      </a>
     </div>
 
-    <div class="description">
-      <div class="booktitle">
-        Parallel and Concurrent Programming in Haskell
-      </div>
-      <div class="author">
-        Simon Marlow
-      </div>
-
-<iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fpcphbook&amp;width=300&amp;height=46&amp;colorscheme=light&amp;layout=button_count&amp;action=like&amp;show_faces=false&amp;send=true"
-        scrolling="no" frameborder="0" style="border:none;
-                                              margin-top: 1ex;
-                                              overflow:hidden;
-                                              width:480px;
-                                              height:30px;"
-        allowTransparency="true"></iframe>
-
-      <p>The book was published in August 2013 by O'Reilly Media.</p>
-
-      <p><a href="http://chimera.labs.oreilly.com/books/1230000000929/index.html">Read
-      the book online</a></p>
-
-      <h3>Where to buy</h3>
-
-      <ul>
-        <li>Paperback
-          <ul>
-            <li><a href="http://shop.oreilly.com/product/0636920026365.do">O'Reilly</a></li>
-            <li><a href="http://www.amazon.com/Parallel-Concurrent-Programming-Haskell-Multithreaded/dp/1449335942">Amazon
-            (US)</a></li>
-            <li><a href="http://www.amazon.co.uk/Parallel-Concurrent-Programming-Haskell-Multithreaded/dp/1449335942">Amazon
-            (UK)</a></li>
-          </ul>
-        </li>
-        <li>E-book
-          <ul>
-            <li><a href="http://shop.oreilly.com/product/0636920026365.do">O'Reilly</a> (DRM-free)</li>
-            <li><a href="http://www.amazon.com/Parallel-Concurrent-Programming-Haskell-ebook/dp/B00DWJ1BIG">Amazon
-            (US)</a></li>
-            <li><a href="http://www.amazon.co.uk/Parallel-Concurrent-Programming-Haskell-ebook/dp/B00DWJ1BIG">Amazon (UK)</a></li>
-          </ul>
-        </li>
-      </ul>
-
-      <h3>Sample code</h3>
-
-      <p>The sample code is
-      on <a href="http://hackage.haskell.org/package/parconc-examples">Hackage</a>
-      and in a <a href="https://github.com/simonmar/parconc-examples">GitHub
-      repo</a>.</p>
-
-      <h3>Feedback</h3>
-
-      <p>Feedback is very
-      welcome: <a href="http://oreilly.com/catalog/errata.csp?isbn=0636920026365">submit
-      errata</a> directly to O'Reilly, where it will appear in the
-      list for everyone to see, or feel free
-      to <a href="mailto:marlowsd@gmail.com">contact me</a> directly.</p>
+    <div class="bookright">
+      <p>My book was published in August
+        2013.<br>
+        <a href="http://community.haskell.org/~simonmar/pcph/">Buy</a><br>
+        <a href="http://chimera.labs.oreilly.com/books/1230000000929/index.html">Read
+        online</a>
+      </p>
     </div>
 
-    <div class="praise">
-      <div class="praisehead">
-        Quotes
-      </div>
+    <div class="clear"></div>
 
-      <div class="quote">
-        This book explains how to write elegant and scalable code
-        while not shying away from any of the tricky bits and corner cases --
-        making it an essential companion for any developer!
-        <div class="attribution">
-          &mdash; Andres Löh, Haskell Consultant at Well-Typed LLP
-        </div>
-      </div>
+    <h2>Talks</h2>
 
-      <div class="quote">
-        Not only does this book provide an excellent overview of
-        Haskell as a language for concurrent and parallel programming,
-        it is essential reading even if you are not a Haskell
-        programmer. It will change how you think about designing and
-        building high performance, solid software.
-        <div class="attribution">
-          &mdash; Bryan O'Sullivan, Manager, Developer Efficiency, Facebook
-        </div>
-      </div>
+    <ul>
+      <li>Slides from my ZuriHac talk
+      <a href="https://github.com/meiersi/HaskellerZ/blob/master/meetups/20130829-FPAfternoon_The_Haxl_Project_at_Facebook/The%20Haxl%20Project%20at%20Facebook.pdf?raw=true">The Haxl Project at Facebook</a></li>
+      <li><a href="http://www.usievents.com/en/conferences/12-paris-usi-2013/sessions/1097-parallel-and-concurrent-programming-in-haskell">USI
+      2013: Parallel
+      and concurrent programming in Haskell</a></li>
+      <li><a href="http://skillsmatter.com/podcast/home/high-performance-concurrency">Haskell
+      eXchange 2012: The Async Package</a></li>
+      <li><a href="http://www.youtube.com/watch?v=J0c4L-AURDQ">Haskell
+      Implementors 2012: Why can't I get a stack trace?</a></li>
+      <br>
+      <li>EDF/CEA/INRIA Summer School 2012, <em>Functional Programming
+        for Parallel and Concurrent Applications</em>.  This is a
+        lecture course I gave on Parallel and Concurrent Haskell,
+        slides for all the lectures are below.
 
-      <div class="quote">
-        <p>These days parallelism and concurrency are ubiquitous, but
-        parallel and concurrent programs are typically much harder to
-        write than sequential ones.  Functional programming languages
-        offer a radical and elegant attack on this challenge, by
-        tackling the root cause, namely unrestricted side effects.
-        But would-be users are only have the research literature to
-        guide them.  This is the first book to offer a thorough,
-        internally-consistent tutorial in parallel and concurrent
-        functional programming aimed at practitioners rather than
-        researchers.  Moreover, Simon Marlow knows exactly what he is
-        talking about: he built GHC's parallel runtime system, and
-        remains its master.  This book will do more than a hundred
-        research papers to get parallel functional programming out of
-        the lab and into the hands of working programmers. Bravo!</p>
-        <div class="attribution">
-          &mdash; Simon Peyton Jones, Principal Researcher at Microsoft Research
-        </div>
-      </div>
+        <ul>
+          <li>
+            <a href="http://community.haskell.org/~simonmar/slides/cadarache2012/1%20-%20parallel%20haskell.pdf">Lecture 1: Basic pure parallelism</a></li>
+          <li>
+            <a href="http://community.haskell.org/~simonmar/slides/cadarache2012/2%20-%20par%20monad.pdf">Lecture 2: The Par Monad</a></li>
+          <li>
+            <a href="http://community.haskell.org/~simonmar/slides/cadarache2012/3%20-%20concurrent%20haskell.pdf">Lecture 3: Basic concurrency</a></li>
+          <li>
+            <a href="http://community.haskell.org/~simonmar/slides/cadarache2012/4%20-%20software%20transactional%20memory.pdf">Lecture 4: Software Transactional Memory</a></li>
+          <li>
+            <a href="http://community.haskell.org/~simonmar/slides/cadarache2012/5%20-%20server%20apps.pdf">Lecture 5: Concurrent network servers</a></li>
+          <li>
+            <a href="http://community.haskell.org/~simonmar/slides/cadarache2012/6%20-%20cloud%20haskell.pdf">Lecture 6: Distributed programming</a></li>
+          <li>
+            <a href="http://community.haskell.org/~simonmar/slides/cadarache2012/7%20-%20accelerate.pdf">Lecture 7: GPU programming with Accelerate</a></li>
+          <li>
+            <a href="http://community.haskell.org/~simonmar/lab-exercises-cadarache.pdf">Exercises</a></li>
+        </ul>
+    </ul>
 
-      <p>If you've read the book and want to add your comments to
-      those above, please <a href="mailto:marlowsd@gmail.com">let me
-      know!</a></p>
-    </div>
+    <h2>Code</h2>
+
+    <ul>
+      <li><a href="http://www.haskell.org/ghc/">GHC</a> (winner of
+      the ACM Programming Languages Software Award in 2011)</li>
+      <li>Haskell tools:
+      <a href="http://www.haskell.org/happy/">Happy</a>, <a href="http://www.haskell.org/alex/">Alex</a>,
+      <a href="http://www.haskell.org/haddock/">Haddock</a>, <a href="http://www.haskell.org/haskellwiki/ThreadScope">ThreadScope</a></li>
+      <li>Haskell
+      libraries: <a href="http://hackage.haskell.org/package/async">async</a>,
+      <a href="http://hackage.haskell.org/package/monad-par">monad-par</a>
+      <li><a href="https://github.com/simonmar">My repos on github</a></li>
+    </ul>
+
+    <h2>Contact</h2>
+
+    <ul>
+      <li>Email: <a href="mailto:marlowsd@gmail.com">marlowsd@gmail.com</a></li>
+      <li><a href="http://www.linkedin.com/profile/view?id=14033175">Simon
+      Marlow on LinkedIn</a></li>
+      <li><a href="https://www.facebook.com/simon.marlow.14224">Simon
+      Marlow on Facebook</a></li>
+      <li><a href="https://twitter.com/simonmar">@simonmar on Twitter</a></li>
+      <li><a href="https://plus.google.com/107890464054636586545">Simon
+      Marlow on Google+</a></li>
+    </ul>
+
+    <h2>Other</h2>
+
+    <ul>
+      <li>I'm a member of <a href="http://www.cs.ox.ac.uk/ralf.hinze/WG2.8/">IFIP Working Group 2.8 on Functional Programming</a></li>
+
+      <li>Program Committees:
+        <ul>
+          <li>CUFP 2013</li>
+          <li>ICFP 2012</li>
+          <li>IPDPS 2010</li>
+          <li>Haskell Implementers Workshop 2009, 2010</li>
+          <li>ISMM'08, '09, '12, '13 (Review committee), ISMM'10 (Program committee)</li>
+          <li>Haskell Symposium 2009</li>
+          <li>ICFP 2006</li>
+          <li>IFL 2004, 2005, 2006, 2010, 2012</li>
+          <li>Haskell Workshop 2002</li>
+        </ul>
+      </li>
+    </ul>
+
   </body>
-
-
-
 </html>
