--- a/pcph/index.html
+++ b/pcph/index.html
@@ -102,7 +102,7 @@
         write than sequential ones.  Functional programming languages
         offer a radical and elegant attack on this challenge, by
         tackling the root cause, namely unrestricted side effects.
-        But would-be users are only have the research literature to
+        But would-be users only have the research literature to
         guide them.  This is the first book to offer a thorough,
         internally-consistent tutorial in parallel and concurrent
         functional programming aimed at practitioners rather than
