Revert "Add affiliate links"
This reverts commit ffd6129dcfcb180dead8bc1afe68262e72e618e6.

--- a/pcph/index.html
+++ b/pcph/index.html
@@ -38,7 +38,7 @@
       <ul>
         <li>Paperback
           <ul>
-            <li><a href="http://www.jdoqocy.com/click-7244489-11290546?url=http%3A%2F%2Fshop.oreilly.com%2Fproduct%2F0636920026365.do%3Fcmp%3Daf-code-books-video-product_cj_0636920026365_%25zp&cjsku=0636920026365">O'Reilly</a></li>
+            <li><a href="http://shop.oreilly.com/product/0636920026365.do">O'Reilly</a></li>
             <li><a href="http://www.amazon.com/Parallel-Concurrent-Programming-Haskell-Multithreaded/dp/1449335942">Amazon
             (US)</a></li>
             <li><a href="http://www.amazon.co.uk/Parallel-Concurrent-Programming-Haskell-Multithreaded/dp/1449335942">Amazon
@@ -47,7 +47,7 @@
         </li>
         <li>E-book
           <ul>
-            <li><a href="http://www.jdoqocy.com/click-7244489-11290546?url=http%3A%2F%2Fshop.oreilly.com%2Fproduct%2F0636920026365.do%3Fcmp%3Daf-code-books-video-product_cj_0636920026365_%25zp&cjsku=0636920026365">O'Reilly</a> (DRM-free)</li>
+            <li><a href="http://shop.oreilly.com/product/0636920026365.do">O'Reilly</a> (DRM-free)</li>
             <li><a href="http://www.amazon.com/Parallel-Concurrent-Programming-Haskell-ebook/dp/B00DWJ1BIG">Amazon
             (US)</a></li>
             <li><a href="http://www.amazon.co.uk/Parallel-Concurrent-Programming-Haskell-ebook/dp/B00DWJ1BIG">Amazon (UK)</a></li>
