add slides; update old links

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p><a href="bib/bib.html">Publications</a></p>
 
     <div class="cover">
-      <a href="http://community.haskell.org/~simonmar/pcph/">
+      <a href="pcph/">
         <image id="cover" src="pcph/cover.png" />
       </a>
     </div>
@@ -33,7 +33,7 @@
     <div class="bookright">
       <p>My book was published in August
         2013.<br>
-        <a href="http://community.haskell.org/~simonmar/pcph/">Buy</a><br>
+        <a href="pcph/">Buy</a><br>
         <a href="http://chimera.labs.oreilly.com/books/1230000000929/index.html">Read
         online</a>
       </p>
@@ -61,21 +61,21 @@
 
         <ul>
           <li>
-            <a href="http://community.haskell.org/~simonmar/slides/cadarache2012/1%20-%20parallel%20haskell.pdf">Lecture 1: Basic pure parallelism</a></li>
+            <a href="slides/cadarache2012/1%20-%20parallel%20haskell.pdf">Lecture 1: Basic pure parallelism</a></li>
           <li>
-            <a href="http://community.haskell.org/~simonmar/slides/cadarache2012/2%20-%20par%20monad.pdf">Lecture 2: The Par Monad</a></li>
+            <a href="slides/cadarache2012/2%20-%20par%20monad.pdf">Lecture 2: The Par Monad</a></li>
           <li>
-            <a href="http://community.haskell.org/~simonmar/slides/cadarache2012/3%20-%20concurrent%20haskell.pdf">Lecture 3: Basic concurrency</a></li>
+            <a href="slides/cadarache2012/3%20-%20concurrent%20haskell.pdf">Lecture 3: Basic concurrency</a></li>
           <li>
-            <a href="http://community.haskell.org/~simonmar/slides/cadarache2012/4%20-%20software%20transactional%20memory.pdf">Lecture 4: Software Transactional Memory</a></li>
+            <a href="slides/cadarache2012/4%20-%20software%20transactional%20memory.pdf">Lecture 4: Software Transactional Memory</a></li>
           <li>
-            <a href="http://community.haskell.org/~simonmar/slides/cadarache2012/5%20-%20server%20apps.pdf">Lecture 5: Concurrent network servers</a></li>
+            <a href="slides/cadarache2012/5%20-%20server%20apps.pdf">Lecture 5: Concurrent network servers</a></li>
           <li>
-            <a href="http://community.haskell.org/~simonmar/slides/cadarache2012/6%20-%20cloud%20haskell.pdf">Lecture 6: Distributed programming</a></li>
+            <a href="slides/cadarache2012/6%20-%20cloud%20haskell.pdf">Lecture 6: Distributed programming</a></li>
           <li>
-            <a href="http://community.haskell.org/~simonmar/slides/cadarache2012/7%20-%20accelerate.pdf">Lecture 7: GPU programming with Accelerate</a></li>
+            <a href="slides/cadarache2012/7%20-%20accelerate.pdf">Lecture 7: GPU programming with Accelerate</a></li>
           <li>
-            <a href="http://community.haskell.org/~simonmar/lab-exercises-cadarache.pdf">Exercises</a></li>
+            <a href="lab-exercises-cadarache.pdf">Exercises</a></li>
         </ul>
     </ul>
 
