--- a/bib/bib.html
+++ b/bib/bib.html
@@ -19,6 +19,28 @@
 ><TR
 ><TD
 ><B
+>Backpack: Retrofitting Haskell with Interfaces</B
+> (Scott Kilpatrick, Derek Dreyer, Simon Peyton Jones, Simon Marlow) <I
+>Proceedings of the 41st ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages</I
+>, pages 19--31, San Diego, California, USA, ACM, 2014</TD
+></TR
+><TR
+><TD
+>[<A HREF="backpack-2014_abstract.html"
+>Abstract</A
+>] [<A HREF="backpack-2014.bib"
+>BibTeX</A
+>]</TD
+></TR
+></TABLE
+></TD
+></TR
+><TR
+><TD
+><TABLE CELLPADDING="0"
+><TR
+><TD
+><B
 ><A HREF="http://community.haskell.org/~simonmar/papers/safe-haskell.pdf"
 >Safe Haskell</A
 ></B
