--- a/bib/async01_abstract.html
+++ b/bib/async01_abstract.html
@@ -11,7 +11,7 @@
 ><TD
 ><P
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/async.pdf"
+><A HREF="http://simonmar.github.io/papers/async.pdf"
 >Asynchronous exceptions in Haskell</A
 ></B
 > (Simon Marlow, Simon Peyton Jones, Andrew Moran, John Reppy) <I
