--- a/bib/backpack-2014_abstract.html
+++ b/bib/backpack-2014_abstract.html
@@ -11,7 +11,9 @@
 ><TD
 ><P
 ><B
->Backpack: Retrofitting Haskell with Interfaces</B
+><A HREF="http://simonmar.github.io/papers/backpack-paper.pdf"
+>Backpack: Retrofitting Haskell with Interfaces</A
+></B
 > (Scott Kilpatrick, Derek Dreyer, Simon Peyton Jones, Simon Marlow) <I
 >Proceedings of the 41st ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages</I
 >, pages 19--31, San Diego, California, USA, ACM, 2014</P
