--- a/bib/bib.html
+++ b/bib/bib.html
@@ -19,7 +19,9 @@
 ><TR
 ><TD
 ><B
->Backpack: Retrofitting Haskell with Interfaces</B
+><A HREF="http://simonmar.github.io/papers/backpack-paper.pdf"
+>Backpack: Retrofitting Haskell with Interfaces</A
+></B
 > (Scott Kilpatrick, Derek Dreyer, Simon Peyton Jones, Simon Marlow) <I
 >Proceedings of the 41st ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages</I
 >, pages 19--31, San Diego, California, USA, ACM, 2014</TD
@@ -41,7 +43,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/safe-haskell.pdf"
+><A HREF="http://simonmar.github.io/papers/safe-haskell.pdf"
 >Safe Haskell</A
 ></B
 > (David Terei, David Mazi&#xe8;res, Simon Marlow, Simon Peyton Jones) <I
@@ -65,7 +67,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/par-tutorial-cefp-2012.pdf"
+><A HREF="http://simonmar.github.io/papers/par-tutorial-cefp-2012.pdf"
 >Parallel and Concurrent Programming in Haskell</A
 ></B
 > (Simon Marlow) <I
@@ -111,7 +113,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/local-gc.pdf"
+><A HREF="http://simonmar.github.io/papers/local-gc.pdf"
 >Multicore Garbage Collection with Local Heaps</A
 ></B
 > (Simon Marlow, Simon Peyton Jones) <I
@@ -135,7 +137,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/monad-par.pdf"
+><A HREF="http://simonmar.github.io/papers/monad-par.pdf"
 >A Monad for Deterministic Parallelism</A
 ></B
 > (Simon Marlow, Ryan Newton, Simon Peyton Jones) <I
@@ -159,7 +161,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/haskell_cnc_draft_submission.pdf"
+><A HREF="http://simonmar.github.io/papers/haskell_cnc_draft_submission.pdf"
 >Intel Concurrent Collections for Haskell</A
 ></B
 > (Ryan Newton, Chih-Ping Chen, Simon Marlow) (unpublished), 2010</TD
@@ -181,7 +183,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/strategies.pdf"
+><A HREF="http://simonmar.github.io/papers/strategies.pdf"
 >Seq no more: Better Strategies for Parallel Haskell</A
 ></B
 > (Simon Marlow, Patrick Maier, Hans-Wolfgang Loidl, Mustafa K Aswad, Phil Trinder) <I
@@ -205,7 +207,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/threadscope.pdf"
+><A HREF="http://simonmar.github.io/papers/threadscope.pdf"
 >Parallel Performance Tuning for Haskell</A
 ></B
 > (Don Jones Jr., Simon Marlow, Satnam Singh) <I
@@ -229,7 +231,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/multicore-ghc.pdf"
+><A HREF="http://simonmar.github.io/papers/multicore-ghc.pdf"
 >Runtime Support for Multicore Haskell</A
 ></B
 > (Simon Marlow, Simon Peyton Jones, Satnam Singh) <I
@@ -253,7 +255,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/concurrent-data.pdf"
+><A HREF="http://simonmar.github.io/papers/concurrent-data.pdf"
 >Comparing the performance of concurrent linked-list implementations in Haskell</A
 ></B
 > (Martin Sulzmann, Edmund S. L. Lam, Simon Marlow) <I
@@ -277,7 +279,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/parallel-gc.pdf"
+><A HREF="http://simonmar.github.io/papers/parallel-gc.pdf"
 >Parallel Generational-Copying Garbage Collection with a Block-Structured Heap</A
 ></B
 > (Simon Marlow, Tim Harris, Roshan P. James, Simon Peyton Jones) <I
@@ -301,7 +303,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/conc-substrate.pdf"
+><A HREF="http://simonmar.github.io/papers/conc-substrate.pdf"
 >Lightweight concurrency primitives for GHC</A
 ></B
 > (Peng Li, Simon Marlow, Simon Peyton Jones, Andrew Tolmach) Haskell '07: Proceedings of the ACM SIGPLAN workshop on Haskell workshop, pages 107--118, Freiburg, Germany, ACM, June 2007</TD
@@ -323,7 +325,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/ghci-debug.pdf"
+><A HREF="http://simonmar.github.io/papers/ghci-debug.pdf"
 >A Lightweight Interactive Debugger for Haskell</A
 ></B
 > (Simon Marlow, Jos'e Iborra, Bernard Pope, Andy Gill) Haskell '07: Proceedings of the ACM SIGPLAN workshop on Haskell workshop, pages 13--24, Freiburg, Germany, ACM, June 2007</TD
@@ -345,7 +347,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/ptr-tagging.pdf"
+><A HREF="http://simonmar.github.io/papers/ptr-tagging.pdf"
 >Faster laziness using dynamic pointer tagging</A
 ></B
 > (Simon Marlow, Alexey Rodriguez Yakushev, Simon Peyton Jones) <I
@@ -369,7 +371,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/evalapplyjfp06.pdf"
+><A HREF="http://simonmar.github.io/papers/evalapplyjfp06.pdf"
 >Making a fast curry: push/enter vs. eval/apply for higher-order languages</A
 ></B
 > (Simon Marlow, Simon Peyton Jones) <I
@@ -393,7 +395,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/ext-exceptions.pdf"
+><A HREF="http://simonmar.github.io/papers/ext-exceptions.pdf"
 >An Extensible Dynamically-Typed Hierarchy of Exceptions</A
 ></B
 > (Simon Marlow) <I
@@ -417,7 +419,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/lockfreedatastructures.pdf"
+><A HREF="http://simonmar.github.io/papers/lockfreedatastructures.pdf"
 >Lock Free Data Structures using STMs in Haskell</A
 ></B
 > (Anthony Discolo, Tim Harris, Simon Marlow, Simon Peyton Jones, Satnam Singh) <I
@@ -441,7 +443,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/vshaskell.pdf"
+><A HREF="http://simonmar.github.io/papers/vshaskell.pdf"
 >Visual Haskell: A full-featured Haskell development environment</A
 ></B
 > (Krasimir Angelov, Simon Marlow) <I
@@ -465,7 +467,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/multiproc.pdf"
+><A HREF="http://simonmar.github.io/papers/multiproc.pdf"
 >Haskell on a Shared-Memory Multiprocessor</A
 ></B
 > (Tim Harris, Simon Marlow, Simon Peyton Jones) <I
@@ -489,7 +491,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/assoc.pdf"
+><A HREF="http://simonmar.github.io/papers/assoc.pdf"
 >Associated types with class</A
 ></B
 > (Manuel M. T. Chakravarty, Gabriele Keller, Simon Peyton Jones, Simon Marlow) <I
@@ -513,7 +515,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/stm.pdf"
+><A HREF="http://simonmar.github.io/papers/stm.pdf"
 >Composable Memory Transactions</A
 ></B
 > (Tim Harris, Simon Marlow, Simon Peyton Jones, Maurice Herlihy) <I
@@ -537,7 +539,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/ExploringBarrierToEntry.pdf"
+><A HREF="http://simonmar.github.io/papers/ExploringBarrierToEntry.pdf"
 >Exploring the Barrier to Entry: Incremental Generational Garbage Collection for Haskell</A
 ></B
 > (A.M. Cheadle, A.J. Field, S. Marlow, S.L. Peyton Jones, R.L. While) <I
@@ -561,7 +563,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/eval-apply.pdf"
+><A HREF="http://simonmar.github.io/papers/eval-apply.pdf"
 >Making a fast curry: push/enter vs. eval/apply for higher-order languages</A
 ></B
 > (Simon Marlow, Simon Peyton Jones) <I
@@ -585,7 +587,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/conc-ffi.pdf"
+><A HREF="http://simonmar.github.io/papers/conc-ffi.pdf"
 >Extending the Haskell Foreign Function Interface with Concurrency</A
 ></B
 > (Simon Marlow, Simon Peyton Jones, Wolfgang Thaller) <I
@@ -609,7 +611,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/web-server-jfp.pdf"
+><A HREF="http://simonmar.github.io/papers/web-server-jfp.pdf"
 >Developing a high-performance web server in Concurrent Haskell</A
 ></B
 > (Simon Marlow) <I
@@ -633,7 +635,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/inline.pdf"
+><A HREF="http://simonmar.github.io/papers/inline.pdf"
 >Secrets of the Glasgow Haskell Compiler inliner</A
 ></B
 > (Simon Peyton Jones, Simon Marlow) <I
@@ -657,7 +659,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/haddock.pdf"
+><A HREF="http://simonmar.github.io/papers/haddock.pdf"
 >Haddock, A Haskell Documentation Tool</A
 ></B
 > (Simon Marlow) <I
@@ -681,7 +683,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/async.pdf"
+><A HREF="http://simonmar.github.io/papers/async.pdf"
 >Asynchronous exceptions in Haskell</A
 ></B
 > (Simon Marlow, Simon Peyton Jones, Andrew Moran, John Reppy) <I
@@ -727,7 +729,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/nonstop.pdf"
+><A HREF="http://simonmar.github.io/papers/nonstop.pdf"
 >Non-stop Haskell</A
 ></B
 > (A. M. Cheadle, A. J. Field, S. Marlow, S. L. Peyton Jones, R. L. While) <I
@@ -751,7 +753,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/weak.pdf"
+><A HREF="http://simonmar.github.io/papers/weak.pdf"
 >Stretching the storage manager: weak pointers and stable names in Haskell</A
 ></B
 > (Simon Peyton Jones, Simon Marlow, Conal Elliot) <I
@@ -797,7 +799,7 @@
 ><TR
 ><TD
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/erltc.pdf"
+><A HREF="http://simonmar.github.io/papers/erltc.pdf"
 >A practical subtyping system for Erlang</A
 ></B
 > (Simon Marlow, Philip Wadler) <I
