--- a/bib/concffi04_abstract.html
+++ b/bib/concffi04_abstract.html
@@ -11,7 +11,7 @@
 ><TD
 ><P
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/conc-ffi.pdf"
+><A HREF="http://simonmar.github.io/papers/conc-ffi.pdf"
 >Extending the Haskell Foreign Function Interface with Concurrency</A
 ></B
 > (Simon Marlow, Simon Peyton Jones, Wolfgang Thaller) <I
