--- a/bib/concurrent-data-08_abstract.html
+++ b/bib/concurrent-data-08_abstract.html
@@ -11,7 +11,7 @@
 ><TD
 ><P
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/concurrent-data.pdf"
+><A HREF="http://simonmar.github.io/papers/concurrent-data.pdf"
 >Comparing the performance of concurrent linked-list implementations in Haskell</A
 ></B
 > (Martin Sulzmann, Edmund S. L. Lam, Simon Marlow) <I
