--- a/bib/ghcinliner02_abstract.html
+++ b/bib/ghcinliner02_abstract.html
@@ -11,7 +11,7 @@
 ><TD
 ><P
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/inline.pdf"
+><A HREF="http://simonmar.github.io/papers/inline.pdf"
 >Secrets of the Glasgow Haskell Compiler inliner</A
 ></B
 > (Simon Peyton Jones, Simon Marlow) <I
