--- a/bib/safe-haskell-2012_abstract.html
+++ b/bib/safe-haskell-2012_abstract.html
@@ -11,7 +11,7 @@
 ><TD
 ><P
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/safe-haskell.pdf"
+><A HREF="http://simonmar.github.io/papers/safe-haskell.pdf"
 >Safe Haskell</A
 ></B
 > (David Terei, David Mazi&#xe8;res, Simon Marlow, Simon Peyton Jones) <I
