--- a/bib/stm05_abstract.html
+++ b/bib/stm05_abstract.html
@@ -11,7 +11,7 @@
 ><TD
 ><P
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/stm.pdf"
+><A HREF="http://simonmar.github.io/papers/stm.pdf"
 >Composable Memory Transactions</A
 ></B
 > (Tim Harris, Simon Marlow, Simon Peyton Jones, Maurice Herlihy) <I
