--- a/bib/weakptrs99_abstract.html
+++ b/bib/weakptrs99_abstract.html
@@ -11,7 +11,7 @@
 ><TD
 ><P
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/weak.pdf"
+><A HREF="http://simonmar.github.io/papers/weak.pdf"
 >Stretching the storage manager: weak pointers and stable names in Haskell</A
 ></B
 > (Simon Peyton Jones, Simon Marlow, Conal Elliot) <I
