--- a/bib/erltc97_abstract.html
+++ b/bib/erltc97_abstract.html
@@ -11,7 +11,7 @@
 ><TD
 ><P
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/erltc.pdf"
+><A HREF="http://simonmar.github.io/papers/erltc.pdf"
 >A practical subtyping system for Erlang</A
 ></B
 > (Simon Marlow, Philip Wadler) <I
