--- a/bib/evalapplyjfp06_abstract.html
+++ b/bib/evalapplyjfp06_abstract.html
@@ -11,7 +11,7 @@
 ><TD
 ><P
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/evalapplyjfp06.pdf"
+><A HREF="http://simonmar.github.io/papers/evalapplyjfp06.pdf"
 >Making a fast curry: push/enter vs. eval/apply for higher-order languages</A
 ></B
 > (Simon Marlow, Simon Peyton Jones) <I
