--- a/bib/extexceptions06_abstract.html
+++ b/bib/extexceptions06_abstract.html
@@ -11,7 +11,7 @@
 ><TD
 ><P
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/ext-exceptions.pdf"
+><A HREF="http://simonmar.github.io/papers/ext-exceptions.pdf"
 >An Extensible Dynamically-Typed Hierarchy of Exceptions</A
 ></B
 > (Simon Marlow) <I
