--- a/bib/haddock02_abstract.html
+++ b/bib/haddock02_abstract.html
@@ -11,7 +11,7 @@
 ><TD
 ><P
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/haddock.pdf"
+><A HREF="http://simonmar.github.io/papers/haddock.pdf"
 >Haddock, A Haskell Documentation Tool</A
 ></B
 > (Simon Marlow) <I
