--- a/bib/lockfreedatastructures06_abstract.html
+++ b/bib/lockfreedatastructures06_abstract.html
@@ -11,7 +11,7 @@
 ><TD
 ><P
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/lockfreedatastructures.pdf"
+><A HREF="http://simonmar.github.io/papers/lockfreedatastructures.pdf"
 >Lock Free Data Structures using STMs in Haskell</A
 ></B
 > (Anthony Discolo, Tim Harris, Simon Marlow, Simon Peyton Jones, Satnam Singh) <I
