--- a/bib/monad-par-2011_abstract.html
+++ b/bib/monad-par-2011_abstract.html
@@ -11,7 +11,7 @@
 ><TD
 ><P
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/monad-par.pdf"
+><A HREF="http://simonmar.github.io/papers/monad-par.pdf"
 >A Monad for Deterministic Parallelism</A
 ></B
 > (Simon Marlow, Ryan Newton, Simon Peyton Jones) <I
