--- a/bib/multiproc05_abstract.html
+++ b/bib/multiproc05_abstract.html
@@ -11,7 +11,7 @@
 ><TD
 ><P
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/multiproc.pdf"
+><A HREF="http://simonmar.github.io/papers/multiproc.pdf"
 >Haskell on a Shared-Memory Multiprocessor</A
 ></B
 > (Tim Harris, Simon Marlow, Simon Peyton Jones) <I
