--- a/bib/pointertagging07_abstract.html
+++ b/bib/pointertagging07_abstract.html
@@ -11,7 +11,7 @@
 ><TD
 ><P
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/ptr-tagging.pdf"
+><A HREF="http://simonmar.github.io/papers/ptr-tagging.pdf"
 >Faster laziness using dynamic pointer tagging</A
 ></B
 > (Simon Marlow, Alexey Rodriguez Yakushev, Simon Peyton Jones) <I
