--- a/bib/strategies-2010_abstract.html
+++ b/bib/strategies-2010_abstract.html
@@ -11,7 +11,7 @@
 ><TD
 ><P
 ><B
-><A HREF="http://community.haskell.org/~simonmar/papers/strategies.pdf"
+><A HREF="http://simonmar.github.io/papers/strategies.pdf"
 >Seq no more: Better Strategies for Parallel Haskell</A
 ></B
 > (Simon Marlow, Patrick Maier, Hans-Wolfgang Loidl, Mustafa K Aswad, Phil Trinder) <I
