--- a/bib/assoc05_abstract.html
+++ b/bib/assoc05_abstract.html
@@ -11,7 +11,7 @@
 ><TD
 ><P
 ><B
-><A HREF="http://simonmar.github.io/papers/assoc.pdf"
+><A HREF="http://simonmar.github.io/bib/papers/assoc.pdf"
 >Associated types with class</A
 ></B
 > (Manuel M. T. Chakravarty, Gabriele Keller, Simon Peyton Jones, Simon Marlow) <I
