--- a/bib/parallel-gc-08_abstract.html
+++ b/bib/parallel-gc-08_abstract.html
@@ -11,7 +11,7 @@
 ><TD
 ><P
 ><B
-><A HREF="http://simonmar.github.io/papers/parallel-gc.pdf"
+><A HREF="http://simonmar.github.io/bib/papers/parallel-gc.pdf"
 >Parallel Generational-Copying Garbage Collection with a Block-Structured Heap</A
 ></B
 > (Simon Marlow, Tim Harris, Roshan P. James, Simon Peyton Jones) <I
