--- a/bib/ghcidebugger07_abstract.html
+++ b/bib/ghcidebugger07_abstract.html
@@ -11,7 +11,7 @@
 ><TD
 ><P
 ><B
-><A HREF="http://simonmar.github.io/papers/ghci-debug.pdf"
+><A HREF="http://simonmar.github.io/bib/papers/ghci-debug.pdf"
 >A Lightweight Interactive Debugger for Haskell</A
 ></B
 > (Simon Marlow, Jos'e Iborra, Bernard Pope, Andy Gill) Haskell '07: Proceedings of the ACM SIGPLAN workshop on Haskell workshop, pages 13--24, Freiburg, Germany, ACM, June 2007</P
