--- a/bib/local-gc-2011_abstract.html
+++ b/bib/local-gc-2011_abstract.html
@@ -11,7 +11,7 @@
 ><TD
 ><P
 ><B
-><A HREF="http://simonmar.github.io/papers/local-gc.pdf"
+><A HREF="http://simonmar.github.io/bib/papers/local-gc.pdf"
 >Multicore Garbage Collection with Local Heaps</A
 ></B
 > (Simon Marlow, Simon Peyton Jones) <I
