--- a/bib/multicore-ghc-09_abstract.html
+++ b/bib/multicore-ghc-09_abstract.html
@@ -11,7 +11,7 @@
 ><TD
 ><P
 ><B
-><A HREF="http://simonmar.github.io/papers/multicore-ghc.pdf"
+><A HREF="http://simonmar.github.io/bib/papers/multicore-ghc.pdf"
 >Runtime Support for Multicore Haskell</A
 ></B
 > (Simon Marlow, Simon Peyton Jones, Satnam Singh) <I
