--- a/bib/nonstophaskell00_abstract.html
+++ b/bib/nonstophaskell00_abstract.html
@@ -11,7 +11,7 @@
 ><TD
 ><P
 ><B
-><A HREF="http://simonmar.github.io/papers/nonstop.pdf"
+><A HREF="http://simonmar.github.io/bib/papers/nonstop.pdf"
 >Non-stop Haskell</A
 ></B
 > (A. M. Cheadle, A. J. Field, S. Marlow, S. L. Peyton Jones, R. L. While) <I
