--- a/bib/threadscope-09_abstract.html
+++ b/bib/threadscope-09_abstract.html
@@ -11,7 +11,7 @@
 ><TD
 ><P
 ><B
-><A HREF="http://simonmar.github.io/papers/threadscope.pdf"
+><A HREF="http://simonmar.github.io/bib/papers/threadscope.pdf"
 >Parallel Performance Tuning for Haskell</A
 ></B
 > (Don Jones Jr., Simon Marlow, Satnam Singh) <I
