--- a/bib/vshaskell05_abstract.html
+++ b/bib/vshaskell05_abstract.html
@@ -11,7 +11,7 @@
 ><TD
 ><P
 ><B
-><A HREF="http://simonmar.github.io/papers/vshaskell.pdf"
+><A HREF="http://simonmar.github.io/bib/papers/vshaskell.pdf"
 >Visual Haskell: A full-featured Haskell development environment</A
 ></B
 > (Krasimir Angelov, Simon Marlow) <I
