--- a/bib/bib.html
+++ b/bib/bib.html
@@ -19,6 +19,30 @@
 ><TR
 ><TD
 ><B
+><A HREF="http://simonmar.github.io/bib/papers/haxl-icfp14.pdf"
+>There is No Fork: An Abstraction for Efficient, Concurrent, and Concise Data Access</A
+></B
+> (Simon Marlow, Louis Brandy, Jonathan Coens, Jon Purdy) <I
+>Proceedings of the 19th ACM SIGPLAN International Conference on Functional Programming</I
+>, pages 325--337, Gothenburg, Sweden, ACM, 2014</TD
+></TR
+><TR
+><TD
+>[<A HREF="nofork-2014_abstract.html"
+>Abstract</A
+>] [<A HREF="nofork-2014.bib"
+>BibTeX</A
+>]</TD
+></TR
+></TABLE
+></TD
+></TR
+><TR
+><TD
+><TABLE CELLPADDING="0"
+><TR
+><TD
+><B
 ><A HREF="http://simonmar.github.io/bib/papers/backpack-paper.pdf"
 >Backpack: Retrofitting Haskell with Interfaces</A
 ></B
