add HX2013 talk

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     <ul>
       <li><a href="https://www.youtube.com/watch?v=jG9PWdV1wso">There
       is No Fork: An Abstraction for Efficient, Concise, Data Access (ICFP 2014)</a></li>
+      <li><a href="https://skillsmatter.com/skillscasts/4429-simon-marlow">The
+      Haxl Project at Facebook</a> (Haskell eXchange 2013)</li>
       <li>Slides from my ZuriHac talk
       <a href="https://github.com/meiersi/HaskellerZ/blob/master/meetups/20130829-FPAfternoon_The_Haxl_Project_at_Facebook/The%20Haxl%20Project%20at%20Facebook.pdf?raw=true">The Haxl Project at Facebook</a></li>
       <li><a href="http://www.usievents.com/en/conferences/12-paris-usi-2013/sessions/1097-parallel-and-concurrent-programming-in-haskell">USI
