add title of FP Days talk

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <ul>
       <li><a href="https://www.youtube.com/watch?v=jG9PWdV1wso">There
       is No Fork: An Abstraction for Efficient, Concise, Data Access (ICFP 2014)</a></li>
-      <li>Haxl Tutorial at FP Days 2014: <a href="https://github.com/simonmar/fpdays14/blob/master/Haxl%20-%20FP%20Days%202014%20split.pdf?raw=true">slides</a> and <a href="https://github.com/simonmar/fpdays14">code</a></li>
+      <li>Remote Data Access made Easy and Fast with Haskell (Haxl Tutorial at FP Days 2014): <a href="https://github.com/simonmar/fpdays14/blob/master/Haxl%20-%20FP%20Days%202014%20split.pdf?raw=true">slides</a> and <a href="https://github.com/simonmar/fpdays14">code</a></li>
       <li><a href="https://skillsmatter.com/skillscasts/4429-simon-marlow">The
       Haxl Project at Facebook</a> (Haskell eXchange 2013)</li>
       <li>Slides from my ZuriHac talk
