--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
 
       <li>Program Committees:
         <ul>
+          <li>PLDI (review committee) 2015</li>
+          <li>ISMM (review committee) 2015</li>
           <li>CUFP 2013</li>
           <li>ICFP 2012</li>
           <li>IPDPS 2010</li>
