--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="./css/poole.css">
   <link rel="stylesheet" href="./css/syntax.css">
   <link rel="stylesheet" href="./css/lanyon.css">
+  <link rel="stylesheet" href="./css/simonmar.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
 
   <!-- Icons -->
@@ -49,27 +50,27 @@
   <div class="sidebar-item">
     <img src="./images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London<br>
-      Co-developer of the
+    <p>Software Engineer at Facebook in London</p>
+    <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
- Compiler</a><br>
-      Author
- of <a href="http://chimera.labs.oreilly.com/books/1230000000929">Parallel
- and Concurrent Programming in Haskell</a>.</p>
+ Compiler</a>
+    </p>
 
     <p>
       Twitter: <a href="https://twitter.com/simonmar">@simonmar</a><br>
       Github: <a href="https://github.com/simonmar">simonmar</a><br>
-      Email: <a href="mailto:marlowsd@gmail.com">marlowsd@gmail.com</a>
+      Email: <a href="mailto:marlowsd@gmail.com">marlowsd@gmail.com</a><br>
+      LinkedIn: <a href="https://uk.linkedin.com/in/simonmarlow">Simon Marlow</a>
     </p>
+
+    <a href="./pages/pcph.html">
+      <image width="180" id="sidebar-cover" src="./images/cover.png"></image>
+    </a>
   </div>
 
   <nav class="sidebar-nav">
     <a class="sidebar-nav-item" href="./">
-      Home
-    </a>
-    <a class="sidebar-nav-item" href="./archive.html">
-      Archive
+      Blog
     </a>
   </nav>
 
