--- a/about.html
+++ b/about.html
@@ -72,11 +72,14 @@
     <a class="sidebar-nav-item" href="./">
       Blog
     </a>
+    <a class="sidebar-nav-item" href="./bib/bib.html">
+      Publications
+    </a>
   </nav>
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2015.
+      &copy; Simon Marlow 2016
     </p>
   </div>
 </div>
